--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -1,5 +1,6 @@
 .fade-in {
   opacity: 0;
+  border-color: "transparent";
   transform: translateY(20px);
   animation: fade-in-animation 0.5s ease-in-out forwards;
 }
